[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PromptPrompter"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
description = "A Python package for prompt enhancement and multi-model interaction with OpenAI and Gemini."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "httpx"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/PromptPrompter"
"Bug Tracker" = "https://github.com/yourusername/PromptPrompter/issues"